# cmake-test

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  demo  test.cpp
Testing/Temporary/: CTestCostData.txt
math/: CMakeLists.txt  Makefile  cmake_install.cmake
utils/: CMakeLists.txt  Makefile  alert.cpp  alert.h  cmake_install.cmake
